# open_weather_to_s3

./: pyproject.toml
weather_dashboard/: function.py  main.py
